# cpp-ug-bremen-variant-clang-format

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
tests/: CMakeLists.txt  eggs_variant.cpp  main.cpp  return.cpp  si_variant.cpp  tree_boost_variant.cpp  tree_eggs_variant.cpp  tree_si_variant.cpp  x-www-form-urlencoded.cpp  x-www-form-urlencoded.hpp
